# pyscrcpy

./: README.md  demo.py  pyproject.toml
pyscrcpy/: core.py
scrcpy/: __init__.py  client.py  const.py  control.py  core.py
tests/: test_client.py
