[tool.poetry]
name = "scrcpy-client"
version = "0.3.4"
description = "A client of scrcpy"
authors = ["lengyue <lengyue@lengyue.me>"]
readme = "README.md"
repository = "https://github.com/leng-yue/py-scrcpy-client"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
av = "^8.0.3"
adbutils = "^0.11.0"
numpy = "^1.21.4"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
