[tool.poetry]
name = "pyscrcpy"
version = "1.0.0"
description = "adb and scrcpy, Android screen monitor and control. Compatible with latest python"
authors = ["yixinNB <58894205+yixinNB@users.noreply.github.com>","lengyue <lengyue@lengyue.me>", "S1M0N38 <bertolottosimone@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yixinNB/pyscrcpy"
license = "MIT"
packages = [
    { include = "pyscrcpy" },
]

[tool.poetry.dependencies]
python = ">=3.7"
av = ">=9.0.0,<11.0.0"
opencv-python = ">=4.5.0"
adbutils = "^1.0.8"
loguru = "^0.7.2"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "*"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.1.2"
myst-parser = "^0.17.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
